# nonebot-plugin-bracket

./: README.md  pyproject.toml
nonebot_plugin_bracket/: __init__.py
